cloud/w10/day-a/policies/constrainttemplates/require-non-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirenonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequireNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirenonroot

        has_container_nonroot(container) {
          container.securityContext.runAsNonRoot == true
        }

        has_pod_nonroot {
          input.review.object.spec.securityContext.runAsNonRoot == true
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not has_pod_nonroot
          not has_container_nonroot(container)
          msg := sprintf("container %q must set runAsNonRoot=true at pod or container level", [container.name])
        }
